@@ -3,7 +3,9 @@ package com.vccorp.eap.infrastructure.security;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.vccorp.eap.common.error.ErrorCode;
 import com.vccorp.eap.common.response.ApiResponse;
+import jakarta.servlet.DispatcherType;
 import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -31,7 +33,8 @@ public class SecurityConfig {
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final ObjectMapper objectMapper;
 
-    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter, ObjectMapper objectMapper) {
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter,
+                          ObjectMapper objectMapper) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
         this.objectMapper = objectMapper;
     }
@@ -58,12 +61,15 @@ public class SecurityConfig {
                 "http://*.shares.zrok.io"
         ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Origin", "X-Requested-With"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Origin", "X-Requested-With", "Mcp-Session-Id"));
+        configuration.setExposedHeaders(List.of("Mcp-Session-Id"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/mcp/**", configuration);
+        source.registerCorsConfiguration("/mcp", configuration);
         return source;
     }
 
@@ -79,13 +85,20 @@ public class SecurityConfig {
                 .accessDeniedHandler(accessDeniedHandler())
             )
             .authorizeHttpRequests(auth -> auth
+                // Allow ASYNC, FORWARD, and ERROR dispatcher types (required for SSE / SseEmitter async completion)
+                .dispatcherTypeMatchers(DispatcherType.ASYNC, DispatcherType.FORWARD, DispatcherType.ERROR).permitAll()
+
                 // Allow OPTIONS preflight requests without authentication
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
                 // Public endpoints
                 .requestMatchers("/api/v1/auth/login", "/api/v1/auth/refresh", "/api/v1/auth/logout", "/api/v1/ping").permitAll()
                 .requestMatchers("/v3/api-docs", "/v3/api-docs/**", "/v3/api-docs.yaml", "/swagger-ui/**", "/swagger-ui.html").permitAll()
-
+                
+                // MCP endpoint requires authentication with Bearer token
+                .requestMatchers("/mcp", "/mcp/**").authenticated()
+                // Autonomous AI Assistant endpoint
+                .requestMatchers("/api/v1/ai/assistant/**").authenticated()
                 // Departments: GET is accessible by any authenticated user (needed for dropdowns in DocumentsPage),
                 // while POST/PUT/DELETE requires SYSTEM_ADMIN
                 .requestMatchers(HttpMethod.GET, "/api/v1/departments", "/api/v1/departments/**").authenticated()
@@ -97,7 +110,7 @@ public class SecurityConfig {
                 // Documents: accessible by employee roles only
                 .requestMatchers("/api/v1/original-documents", "/api/v1/original-documents/**").hasAnyAuthority("ROLE_EMPLOYEE", "ROLE_DEPT_MANAGER", "ROLE_BOARD")
                 .requestMatchers("/api/v1/alias-documents", "/api/v1/alias-documents/**").hasAnyAuthority("ROLE_EMPLOYEE", "ROLE_DEPT_MANAGER", "ROLE_BOARD")
-                .requestMatchers("/api/v1/search").hasAnyAuthority("ROLE_EMPLOYEE", "ROLE_DEPT_MANAGER", "ROLE_BOARD")
+
 
                 // All other endpoints require authentication
                 .anyRequest().authenticated()
